//
// Copyright 2018, TeamDev. All rights reserved.
//
// Redistribution and use in source and/or binary forms, with or without
// modification, must retain the above copyright notice and the following
// disclaimer.
//
// THIS SOFTWARE IS PROVIDED BY THE COPYRIGHT HOLDERS AND CONTRIBUTORS
// "AS IS" AND ANY EXPRESS OR IMPLIED WARRANTIES, INCLUDING, BUT NOT
// LIMITED TO, THE IMPLIED WARRANTIES OF MERCHANTABILITY AND FITNESS FOR
// A PARTICULAR PURPOSE ARE DISCLAIMED. IN NO EVENT SHALL THE COPYRIGHT
// OWNER OR CONTRIBUTORS BE LIABLE FOR ANY DIRECT, INDIRECT, INCIDENTAL,
// SPECIAL, EXEMPLARY, OR CONSEQUENTIAL DAMAGES (INCLUDING, BUT NOT
// LIMITED TO, PROCUREMENT OF SUBSTITUTE GOODS OR SERVICES; LOSS OF USE,
// DATA, OR PROFITS; OR BUSINESS INTERRUPTION) HOWEVER CAUSED AND ON ANY
// THEORY OF LIABILITY, WHETHER IN CONTRACT, STRICT LIABILITY, OR TORT
// (INCLUDING NEGLIGENCE OR OTHERWISE) ARISING IN ANY WAY OUT OF THE USE
// OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
//

syntax = "proto3";

package spine.examples.blog;

import "spine/options.proto";

option (type_url_prefix) = "type.spine.examples.blog";
option java_package = "io.spine.examples.blog.server.q";
option java_outer_classname = "ProjectionsProto";
option java_multiple_files = true;
option java_generate_equals_and_hash = true;

import "blog/identifiers.proto";

// A blog view provides data visible on the screen.
message BlogView {
    option (entity).kind = PROJECTION;

    // The ID of the blog.
    BlogId blog_id = 1 [(required) = true];
    // The title of the blog.
    string title = 2 [(required) = true];
    // Posts in the reverse chronological order.
    repeated PostItem posts = 3;
}

// A post in the blog.
message PostItem {
    option (entity).kind = PROJECTION;

    // The ID of the post.
    PostId id = 1 [(required) = true];
    // The title of the post.
    string title = 2 [(required) = true];
    // The content of the post.
    string body = 3;
}
